# inline_enum_handler

./: .gitignore  Cargo.toml  README.md
examples/: async.rs  basic.rs  immutable.rs  multiple.rs  rename.rs  return-type.rs
src/: lib.rs
